# Dirigera-Bridge

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README_TEST.md  docker-compose.yml  main.py  mosquitto.conf  mosquitto.conf.example  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  mypy.yml  ruff.yml
app/: __init__.py  config.py  orchestrator.py
app/core/: __init__.py  discovery_cache.py  errors.py  event_bus.py  lifecycle.py  metrics.py  retry.py  state_cache.py
app/dirigera/: __init__.py  models.py  rest_client.py  websocket_client.py
app/ha/: __init__.py  ha_client.py
app/mapping/: __init__.py  command_mapper.py  device_mapper.py  device_registry.py  state_mapper.py
app/mapping/domains/: __init__.py  air_purifier.py  binary_sensor.py  blind.py  button.py  environment_sensor.py  gateway.py  light.py  outlet.py  remote.py  sensor.py  speaker.py  switch.py
scripts/: generate_dirigera_token.py
tests/: __init__.py  conftest.py
tests/config/: __init__.py  test_config.py
tests/core/: __init__.py  test_discovery_cache.py  test_errors.py  test_event_bus.py  test_lifecycle.py  test_metrics.py  test_retry.py  test_state_cache.py
tests/dirigera/: __init__.py  test_models.py  test_rest_client.py  test_websocket_client.py
tests/ha/: test_ha_client.py
tests/integration/: __init__.py  test_orchestrator_flow.py
tests/mapping/: __init__.py  test_command_mapper.py  test_device_mapper.py  test_device_registry.py  test_state_mapper.py
tests/mapping/domains/: __init__.py  test_air_purifier.py  test_binary_sensor.py  test_blind.py  test_button.py  test_environment_sensor.py  test_gateway.py  test_light.py  test_outlet.py  test_remote.py  test_sensor.py  test_speaker.py  test_switch.py
